...
            </Text>
            <View className="gap-4">
              <Pressable
                className="flex h-9 items-center justify-center bg-blue-500 rounded-md px-4 py-2"
                onPress={syncCodePush}
              >
                <Text className="text-white">Sync CodePush</Text>
              </Pressable>
              <Pressable
                className="flex h-9 items-center justify-center bg-blue-500 rounded-md px-4 py-2"
                onPress={() => {
                  console.log("Trying to restartApp");
                  CodePush.restartApp(true);
...
