...
import { Platform } from "react-native";
import CodePush from "@turbopush/react-native-code-push";

type CodepushStatus =
  | keyof typeof CodePush.SyncStatus 
  | "START"
  | "ERROR"
  | "UNKNOWN"
  | "RATE_LIMIT_ERROR"
  | "RATE_LIMIT_API_ERROR";

const CODEPUSH_STATUS_MESSAGE: (keyof typeof CodePush.SyncStatus)[] = [
  "UP_TO_DATE",
...
